syntax = "proto3";

package grpc.product;

option java_multiple_files = true;
option java_package = "grpc.product";
option java_outer_classname = "Product";

message UpdateProductQuantityStubRequest {
  int64 productId = 1;
  int64 quantity = 2;
  string quantityType = 3;
}

message UpdateProductQuantityStubResponse {
  bool result = 1;
}

message FindProductStubRequest {
  int64 productId = 1;
}

message FindProductStubResponse {
  int64 productId = 1;
  string sellerEmail = 2;
  string productName = 3;
  string productImgUrl = 4;
  string descriptionImgUrl = 5;
  repeated string keywords = 6;
  repeated string productOption = 7;
  int64 price = 8;
  int64 quantity = 9;
  string category = 10;
  string regDateTime = 11;
}

service ProductService {
  rpc updateProductQuantity (UpdateProductQuantityStubRequest) returns (UpdateProductQuantityStubResponse);
  rpc findProduct (FindProductStubRequest) returns (FindProductStubResponse);
}
